Fix content being hidden behind address bar on Safari for iOS
https://allthingssmitty.com/2020/05/11/css-fix-for-100vh-in-mobile-webkit/

--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -1,11 +1,23 @@
 @import '../variables.scss';
 
 #container {
-  display: flex;
-  height: 100vh;
+  display: grid;
+  max-height: 100vh;
+  max-height: -webkit-fill-available;
 
+  @media screen and (min-width: $mobile-screen-width) {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+
+    > div {
+      max-height: 100vh;
+    }
+  }
   @media screen and (max-width: $mobile-screen-width) {
-    flex-direction: column;
+    grid-template-rows: repeat(2, minmax(0, 1fr));
+
+    > div {
+      max-height: 50vh;
+    }
 
     > div:first-child {
       border-bottom: 4px solid $lighter-background;
